@@ -1,3 +1,10 @@
+2007-12-19  Ross Burton  <ross@burtonini.com>
+
+	* libjuicer/sj-structures.h:
+	* src/sj-extracting.c:
+	* src/sj-prefs.c:
+	Remove TrackData->iter, write better code instead.
+
 2007-12-11  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer-48.png:
